--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Blog API with CRUD, authentication",
   "main": "api/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "node api/index.js",
-    "server": "nodemon api/index.js"
+   "dev":"concurrently \"npm:main\" \"npm:start\"",
+   "main":"npm start --prefix client",
+   "start":"nodemon api/index.js",
+   "build":"npm install && npm install --prefix client && npm run build --prefix client"
+   
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
