--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
    "dev":"concurrently \"npm:main\" \"npm:start\"",
    "main":"npm start --prefix client",
    "start":"nodemon api/index.js",
-   "build":"npm install && npm install --prefix client && npm run build --prefix client"
+   "build":"npm install"
    
   },
   "author": "",
